<resources>
    <string name="app_name">SyncNotifySender</string>
    <string name="app_name_CN">同步通知</string>
    <string name="welcome">欢迎使用同步通知发送器！</string>
    <string name="last_update_time">上次更新时间:2024年7月14日</string>
    <!--    <string name="notice">虽然本软件已经经过了数百次测试和超过半年的使用，但仍不保证消息一定能送达，可能由于网络问题/客户端没开机/软件bug导致消息未能弹出！本软件开发者不对造成的任何损失承担责任！使用即代表您知晓并同意以上条款。</string>-->
    <string name="notice">嘎嘎~机械，嘎嘎~</string>
    <string name="popup_time">弹出时间：</string>
    <string name="popup_time_after_class">下课后（未完工，不可用）</string>
    <string name="popup_time_default">取决于客户端</string>
    <string name="popup_time_forced">立即弹出</string>
    <string name="popup_time_figured">选择时间</string>
    <string name="popup_option">消息选项</string>
    <string name="popup_option_sound">声音提醒</string>
    <string name="popup_option_fullscreen">全屏提醒（非必要不建议使用）</string>
    <string name="popup_time_invisible">不弹出</string>
    <string name="message_textbox_hint">在此处输入消息内容</string>
    <string name="update_title">发现新版本！</string>
    <string name="update_description">请您尽量使用新版本！新版本包含功能更新以及bug的修复 \n 本应用程序不盈利，所以新版本同样不会包含任何广告，请放心更新！</string>
    <string name="title_send_box">发送</string>
    <string name="title_document">文档</string>
    <string name="title_settings">设置</string>
</resources>