<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
                      android:layout_height="match_parent">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/welcome"
                      android:paddingTop="10dp"
                      android:paddingStart="10dp"
                      android:textSize="20dp"/>
            <RelativeLayout android:paddingStart="15dp"
                            android:paddingTop="10dp" android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                <TextView android:id="@+id/popup_time_textview" android:gravity="center_vertical"
                          android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:paddingTop="10dp"
                          android:text="@string/popup_time"/>
                <RadioGroup android:id="@+id/popup_time_radiobutton_group" android:layout_toEndOf="@+id/popup_time_textview" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkedButton="@id/popup_time_after_class_radiobutton">
                    <RadioButton android:id="@+id/popup_time_after_class_radiobutton"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/popup_time_after_class"/>
                    <RadioButton android:id="@+id/popup_time_default_radiobutton"
                            android:layout_width="wrap_content" android:layout_height="wrap_content"
                                 android:text="@string/popup_time_default"/>
                    <RadioButton android:id="@+id/popup_time_forced_radiobutton"
                            android:layout_width="wrap_content" android:layout_height="wrap_content"
                                 android:text="@string/popup_time_forced"/>
                    <RadioButton android:id="@+id/popup_time_figured_radiobutton"
                            android:layout_width="wrap_content" android:layout_height="wrap_content"
                                 android:text="@string/popup_time_figured"/>
                    <RadioButton android:id="@+id/popup_time_invisible_radiobutton"
                            android:layout_width="wrap_content" android:layout_height="wrap_content"
                                 android:text="@string/popup_time_invisible"/>
                </RadioGroup>
            </RelativeLayout>
            <EditText style="@style/InputBoxStyle" android:layout_width="match_parent" android:maxLines="8"
                      android:hint="@string/message_textbox_hint"
                      android:layout_height="250dp" android:paddingStart="10dp" android:paddingEnd="10dp"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/send_fab"
                    android:src="@drawable/ic_send_foreground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="16dp"
                    app:fabSize="normal"
                    app:maxImageSize="57dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>